<?xml version='1.0' encoding='UTF-8'?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>ie.flexx.jackanory</groupId>
    <version>1.0</version>
    <artifactId>jackanory</artifactId>
    <packaging>pom</packaging>
    <name>Jackanory Project</name>
    <modules>
        <module>jackanory-data</module>
        <module>jackanory-data-dao</module>
        <module>jackanory-domain</module>
        <module>jackanory-domain-dao</module>
        <module>jackanory-manager</module>
        <module>jackanory-spring</module>
        <module>jackanory-tests</module>
    </modules>
    <properties>
        <java.ee.version>7.0</java.ee.version>
        <org.springframework.version>4.0.7.RELEASE</org.springframework.version>
        <org.hibernate.version>4.3.7.Final</org.hibernate.version>
        <junit.version>4.11</junit.version>
        <org.mockito.version>1.8.5</org.mockito.version>
        <org.powermock.version>1.4.12</org.powermock.version>
        <ie.flexx.jackanory.version>1.0</ie.flexx.jackanory.version>
    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>javax</groupId>
                <artifactId>javaee-api</artifactId>
                <version>${java.ee.version}</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-aop</artifactId>
                <version>${org.springframework.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-context</artifactId>
                <version>${org.springframework.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-context-support</artifactId>
                <version>${org.springframework.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-orm</artifactId>
                <version>${org.springframework.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-test</artifactId>
                <version>${org.springframework.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-core</artifactId>
                <version>${org.hibernate.version}</version>
            </dependency>
            <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-entitymanager</artifactId>
                <version>${org.hibernate.version}</version>
            </dependency>

            <dependency>
                <groupId>commons-collections</groupId>
                <artifactId>commons-collections</artifactId>
                <version>3.2.1</version>
            </dependency>

            <dependency>
                <groupId>ie.flexx.jackanory.data</groupId>
                <artifactId>jackanory-data-impl</artifactId>
                <version>${ie.flexx.jackanory.version}</version>
                <type>jar</type>
            </dependency>
            <dependency>
                <groupId>ie.flexx.jackanory.data.dao</groupId>
                <artifactId>jackanory-data-dao-api</artifactId>
                <version>${ie.flexx.jackanory.version}</version>
                <type>jar</type>
            </dependency>
            <dependency>
                <groupId>ie.flexx.jackanory.data.dao</groupId>
                <artifactId>jackanory-data-dao-impl</artifactId>
                <version>${ie.flexx.jackanory.version}</version>
                <type>jar</type>
            </dependency>
            <dependency>
                <groupId>ie.flexx.jackanory.domain</groupId>
                <artifactId>jackanory-domain-api</artifactId>
                <version>${ie.flexx.jackanory.version}</version>
                <type>jar</type>
            </dependency>
            <dependency>
                <groupId>ie.flexx.jackanory.domain</groupId>
                <artifactId>jackanory-domain-impl</artifactId>
                <version>${ie.flexx.jackanory.version}</version>
                <type>jar</type>
            </dependency>
            <dependency>
                <groupId>ie.flexx.jackanory.domain.dao</groupId>
                <artifactId>jackanory-domain-dao-api</artifactId>
                <version>${ie.flexx.jackanory.version}</version>
                <type>jar</type>
            </dependency>
            <dependency>
                <groupId>ie.flexx.jackanory.domain.dao</groupId>
                <artifactId>jackanory-domain-dao-impl</artifactId>
                <version>${ie.flexx.jackanory.version}</version>
                <type>jar</type>
            </dependency>
            <dependency>
                <groupId>ie.flexx.jackanory.manager</groupId>
                <artifactId>jackanory-manager-api</artifactId>
                <version>${ie.flexx.jackanory.version}</version>
                <type>jar</type>
            </dependency>
            <dependency>
                <groupId>ie.flexx.jackanory.manager</groupId>
                <artifactId>jackanory-manager-impl</artifactId>
                <version>${ie.flexx.jackanory.version}</version>
                <type>jar</type>
            </dependency>
            <dependency>
                <groupId>ie.flexx.jackanory.spring</groupId>
                <artifactId>jackanory-spring-spring</artifactId>
                <version>${ie.flexx.jackanory.version}</version>
                <scope>runtime</scope>
                <type>jar</type>
            </dependency>

            <dependency>
                <groupId>com.h2database</groupId>
                <artifactId>h2</artifactId>
                <version>1.4.183</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-all</artifactId>
                <version>${org.mockito.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.powermock</groupId>
                <artifactId>powermock-module-junit4</artifactId>
                <version>${org.powermock.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.powermock</groupId>
                <artifactId>powermock-api-mockito</artifactId>
                <version>${org.powermock.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <inherited>true</inherited>
                <configuration>
                    <fork>true</fork>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.16</version>
                <configuration>
                    <forkCount>4</forkCount>
                    <reuseForks>true</reuseForks>
                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.apache.maven.surefire</groupId>
                        <artifactId>surefire-junit47</artifactId>
                        <version>2.16</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.3.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-ejb-plugin</artifactId>
                <version>2.3</version>
                <configuration>
                    <ejbVersion>3.0</ejbVersion>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>2.1</version>
                <configuration>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-ear-plugin</artifactId>
                <version>2.4.2</version>
                <configuration>
                    <version>6</version>
                    <defaultLibBundleDir>lib</defaultLibBundleDir>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
